# Auto_Reservation

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: secrets.example.json
src/: email_handler.py  logger.py  main.py  notifier.py  notion_handler.py  pdf_reader.py  text_analyzer.py
src/utils/: paths.py
